UI (show post): 202

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,9 +8,9 @@
     }
 }
 
-textarea {
+/* textarea {
     padding: 0 !important;
-}
+} */
 
 div.ck.ck-content.ck-editor__editable {
     @apply h-[20rem];
