--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,4 +16,26 @@
 
 div.ck.ck-content.ck-editor__editable {
     @apply h-[20rem];
+}
+
+.main-container {
+    font-family: "Lato";
+    /* width: fit-content; */
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.ck-content {
+    font-family: "Lato";
+    line-height: 1.6;
+    word-break: break-word;
+}
+
+.editor-container_classic-editor .editor-container__editor {
+    /* min-width: 795px;
+    max-width: 795px; */
+}
+
+.editor-container_include-block-toolbar {
+    /* margin-left: 42px; */
 }
