--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+DK+Uloopet:wght@100..400&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -9,10 +10,6 @@
         @apply border border-gray-600;
     }
 }
-
-/* textarea {
-    padding: 0 !important;
-} */
 
 div.ck.ck-content.ck-editor__editable {
     @apply h-[20rem];
